auth auth && database && rate Limiting

--- a/.env
+++ b/.env
@@ -1,3 +1,9 @@
 PORT=8080
 JWT_SECRET=secret_password
 ENV=development
+DB_HOST=localhost
+DB_USER=development_user
+DB_PORT=5432
+DB_NAME=development_database
+DB_PASSWORD=development_secret_password
+RATE_LIMIT=100 #requests per minute
